2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-hkp-source.c: Fix crasher when resolving
    the host name fails. Fixes #334413
    
2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-op.c:
    * src/seahorse-key-op.h:
    * src/seahorse-sign.c: Prompt for signer when signing a key 
    Fixes bug #331873
    
2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-passphrase.c: Fixed problem when prompting
    for passphrase without a prompt message. Fixes Bug #334275
    
2006-03-05  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in: Update version number to 0.8.2

2006-03-05  Nate Nielsen  <nielsen@memberwebs.com>

    * Version 0.8.1
    * TODO:
    * INSTALL:
    * NEWS:
    * README:

2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-op.c: Fix memory leak in seahorse_key_op_sign

2006-02-19  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-key-op.c: Fix state machine for signing keys.
    Patch by Daniel Rodriguez Garcia.  (Bug #319409)

2006-01-29  Nate Nielsen  <nielsen@memberwebs.com>
    
    * configure.in: 
    * plugins/gedit/Makefile.am:
    * plugins/gedit/seahorse-gedit-plugin.c:
    * plugins/gedit/seahorse-gedit.c:
    * plugins/gedit/seahorse-gedit.h:
    * plugins/gedit/seahorse-pgp.gedit-plugin.desktop.in: 
    Adapt gedit plugin to gedit 2.14 plugin API. Bug #328330
    * plugins/gedit/seahorse-gedit-bonobo.c:
    * plugins/gedit/seahorse-gedit-plugin.c:
    * plugins/gedit/seahorse-gedit.c:
    * plugins/gedit/seahorse-gedit.h:
    Fix the old gedit (< 2.12) bonobo plugin to work with 
    the new framework. Bug #328330
    * libseahorse/seahorse-util.c: Fix build warnings
    
2006-01-26  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse.desktop.in:
    * plugins/nautilus/seahorse-pgp-preferences.desktop.in: 
    Corrected desktop files (Bug #328457). Patch by Stephane Loeuillet.