@@ -1,5 +1,9 @@
 2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-util.c: Fix possible allocation crasher.
+    
+2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-hkp-source.c: Fix crasher when resolving
     the host name fails. Fixes #334413
     
